fixed issue with page jumping when toggle switch clicked - caused by no padding of switch inside sticky element

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,13 +27,13 @@ h2 {
 #navbar .container{
     display: flex;
     justify-content: space-between;
+    padding: 1rem;
 }
 
 #navbar ul {
     display: flex;
     list-style: none;
     gap: 1rem; 
-    padding: 1rem;
     font-size: 1.5rem;
     justify-items: space-between;
     margin-left: 2rem;
@@ -224,6 +224,58 @@ figcaption {
     font-size: 1.5rem;
     color: #ffffff;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "EN";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    transform: translateX(26px);
+    content: "FR";
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
 
 
 @media only screen and (min-width: 1050px) {
